--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: SJ's AI Blog
+email: seungju.kim.kor@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Welcome to my personal blog, where I delve into the fascinating world of deep learning and reinforcement learning. 
+  Here, I aim to provide insightful content and share my knowledge on these cutting-edge topics.
+  Through my blog, I hope to demystify the complexities of deep learning, exploring its foundations, applications, and the latest advancements.
+  From neural networks to convolutional and recurrent architectures, I will cover various aspects of deep learning, catering to both beginners and seasoned practitioners.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
